--- a/Анализ данных аптеки.ipynb
+++ b/Анализ данных аптеки.ipynb
@@ -21,8 +21,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#блок с проверкой гипотез:\n",
-    "#подготовка датафрейма\n",
+    "#блок с проверкой гипотез: #block with hypothesis testing:\n",
+    "#подготовка датафрейма #dataframe preparation\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "data = pd.read_excel('ответы.xlsx')\n",
@@ -289,14 +289,14 @@
     }
    ],
    "source": [
-    "#гипотеза №1\n",
+    "#гипотеза №1 #hypothesis №1\n",
     "import statsmodels.formula.api as smf\n",
-    "# построение регрессионной модели по избранным факторам\n",
+    "# построение регрессионной модели по избранным факторам # building a regression model based on selected factors\n",
     "lm = smf.ols(formula='Запомнил_36_6 ~ Оценка_Время_ожидания_в_очереди + Оценка_Чистота_помещения + Оценка_Ассортимент_лекарств_в_аптеке + Оценка_Уровень_цен + Оценка_Дружелюбность_персонала_аптеки + Оценка_Квалификация_фармацевтов_аптеки + Оценка_Удобство_расположения_аптеки', data=data).fit()\n",
     "\n",
-    "# вывод коэффициентов\n",
+    "# вывод коэффициентов # output coefficients\n",
     "lm.params\n",
-    "lm.summary() # вывод саммари по модели"
+    "lm.summary() # вывод саммари по модели # output summary of the model"
    ]
   },
   {
@@ -406,12 +406,12 @@
    ],
    "source": [
     "#гипотеза №2\n",
-    "# построение регрессионной модели по избранным факторам\n",
+    "# построение регрессионной модели по избранным факторам # building a regression model based on selected factors\n",
     "lm = smf.ols(formula='Вероятность_рекомендации ~ Частота_пользования_36_6 + Частота_использования_аптек', data=data).fit()\n",
     "\n",
-    "# вывод коэффициентов\n",
+    "# вывод коэффициентов # output coefficients\n",
     "lm.params\n",
-    "lm.summary() # вывод саммари по модели"
+    "lm.summary() # вывод саммари по модели # output summary of the model"
    ]
   },
   {
@@ -552,12 +552,12 @@
    ],
    "source": [
     "#гипотеза №3\n",
-    "# построение регрессионной модели по избранным факторам\n",
+    "# построение регрессионной модели по избранным факторам # building a regression model based on selected factors\n",
     "lm = smf.ols(formula='Вероятность_рекомендации ~ Удобство_расположения_аптеки + Квалификация_фармацевтов_аптеки + Дружелюбность_персонала_аптеки + Ассортимент_лекарств_в_аптеке + Уровень_цен + Скорость_обслуживания_фармацевта + Удобство_расположения_аптеки', data=data).fit()\n",
     "\n",
-    "# вывод коэффициентов\n",
+    "# вывод коэффициентов # output coefficients\n",
     "lm.params\n",
-    "lm.summary() # вывод саммари по модели"
+    "lm.summary() # вывод саммари по модели # output summary of the model"
    ]
   },
   {
@@ -886,7 +886,7 @@
     }
    ],
    "source": [
-    "#блок с разработкой оценкок для таблицы по модели Фишбена\n",
+    "#блок с разработкой оценкок для таблицы по модели Фишбена #block with the development of estimates for the table according to the Fishbein model\n",
     "fishben = pd.read_excel('Аптеки.xlsx')\n",
     "fishben.head()"
    ]
@@ -1481,6 +1481,8 @@
     }
    ],
    "source": [
+    "#создание соответствующей функции и непосредственно перевод полученных значений в числовой формат\n",
+    "#creating the corresponding function and directly converting the resulting values into numeric format\n",
     "def fish(x):\n",
     "    if x == 'Полностью удовлетворен': return 3\n",
     "    elif x == 'Скорее удовлетворен': return 1.5\n",
@@ -1523,6 +1525,8 @@
     }
    ],
    "source": [
+    "# создание датафрейма с показателями по каждому столбцу с данными по каждой из аптек (средние значения)\n",
+    "# creating a dataframe with indicators for each column with data for each pharmacy (average values)\n",
     "ind = ['Удобство расположения аптеки', 'Квалификация фармацевтов аптеки', 'Дружелюбность персонала аптеки', \n",
     "      'Ассортимент лекарств в аптеке', 'Уровень цен', 'Время ожидания в очереди', 'Чистота помещения аптеки']\n",
     "col = ['Оценка ei', 'Горздрав', 'Ригла', 'Доктор Столетов', 'Столички', 'Неофарм']\n",
@@ -1724,171 +1728,10 @@
     }
    ],
    "source": [
+    "# финальный вид датсета по модели Фишбейна\n",
+    "# final view of the dataset based on Fishbein's model\n",
     "data_set = pd.DataFrame(final, ind, col)\n",
     "data_set"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
-   "id": "e64c0c46",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Оценка ei</th>\n",
-       "      <th>Горздрав</th>\n",
-       "      <th>Ригла</th>\n",
-       "      <th>Доктор Столетов</th>\n",
-       "      <th>Столички</th>\n",
-       "      <th>Неофарм</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Удобство расположения аптеки</th>\n",
-       "      <td>-0.11</td>\n",
-       "      <td>1.77</td>\n",
-       "      <td>-0.70</td>\n",
-       "      <td>-3.00</td>\n",
-       "      <td>0.75</td>\n",
-       "      <td>-2.73</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Квалификация фармацевтов аптеки</th>\n",
-       "      <td>1.45</td>\n",
-       "      <td>1.66</td>\n",
-       "      <td>1.18</td>\n",
-       "      <td>-1.93</td>\n",
-       "      <td>1.07</td>\n",
-       "      <td>-2.09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Дружелюбность персонала аптеки</th>\n",
-       "      <td>1.66</td>\n",
-       "      <td>1.02</td>\n",
-       "      <td>1.07</td>\n",
-       "      <td>-2.20</td>\n",
-       "      <td>1.07</td>\n",
-       "      <td>-2.14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Ассортимент лекарств в аптеке</th>\n",
-       "      <td>1.66</td>\n",
-       "      <td>1.82</td>\n",
-       "      <td>1.50</td>\n",
-       "      <td>-2.73</td>\n",
-       "      <td>1.02</td>\n",
-       "      <td>-2.46</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Уровень цен</th>\n",
-       "      <td>-2.57</td>\n",
-       "      <td>0.75</td>\n",
-       "      <td>-2.14</td>\n",
-       "      <td>-2.79</td>\n",
-       "      <td>1.02</td>\n",
-       "      <td>-2.84</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Время ожидания в очереди</th>\n",
-       "      <td>1.18</td>\n",
-       "      <td>0.54</td>\n",
-       "      <td>0.75</td>\n",
-       "      <td>-2.30</td>\n",
-       "      <td>0.32</td>\n",
-       "      <td>-2.14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Чистота помещения аптеки</th>\n",
-       "      <td>3.00</td>\n",
-       "      <td>1.98</td>\n",
-       "      <td>1.55</td>\n",
-       "      <td>-2.20</td>\n",
-       "      <td>1.39</td>\n",
-       "      <td>-2.25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Сумма</th>\n",
-       "      <td>0.90</td>\n",
-       "      <td>1.36</td>\n",
-       "      <td>0.46</td>\n",
-       "      <td>-2.45</td>\n",
-       "      <td>0.95</td>\n",
-       "      <td>-2.38</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                 Оценка ei  Горздрав  Ригла  Доктор Столетов  \\\n",
-       "Удобство расположения аптеки         -0.11      1.77  -0.70            -3.00   \n",
-       "Квалификация фармацевтов аптеки       1.45      1.66   1.18            -1.93   \n",
-       "Дружелюбность персонала аптеки        1.66      1.02   1.07            -2.20   \n",
-       "Ассортимент лекарств в аптеке         1.66      1.82   1.50            -2.73   \n",
-       "Уровень цен                          -2.57      0.75  -2.14            -2.79   \n",
-       "Время ожидания в очереди              1.18      0.54   0.75            -2.30   \n",
-       "Чистота помещения аптеки              3.00      1.98   1.55            -2.20   \n",
-       "Сумма                                 0.90      1.36   0.46            -2.45   \n",
-       "\n",
-       "                                 Столички  Неофарм  \n",
-       "Удобство расположения аптеки         0.75    -2.73  \n",
-       "Квалификация фармацевтов аптеки      1.07    -2.09  \n",
-       "Дружелюбность персонала аптеки       1.07    -2.14  \n",
-       "Ассортимент лекарств в аптеке        1.02    -2.46  \n",
-       "Уровень цен                          1.02    -2.84  \n",
-       "Время ожидания в очереди             0.32    -2.14  \n",
-       "Чистота помещения аптеки             1.39    -2.25  \n",
-       "Сумма                                0.95    -2.38  "
-      ]
-     },
-     "execution_count": 84,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ind = ['Удобство расположения аптеки', 'Квалификация фармацевтов аптеки', 'Дружелюбность персонала аптеки', \n",
-    "      'Ассортимент лекарств в аптеке', 'Уровень цен', 'Время ожидания в очереди', 'Чистота помещения аптеки', 'Сумма']\n",
-    "summa_col = []\n",
-    "for stolb in range(len(final[0])):\n",
-    "    summ = 0\n",
-    "    for line in range(len(final)):\n",
-    "        summ += final[line][stolb]\n",
-    "    summa_col.append(round(summ/7, 2))\n",
-    "final.append(summa_col)\n",
-    "data_set = pd.DataFrame(final, ind, col)\n",
-    "data_set"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 85,
-   "id": "58c8e058",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_set.to_excel('Таблица1.xlsx')"
    ]
   }
  ],
