translation added, part 2

--- a/Анализ данных аптеки.ipynb
+++ b/Анализ данных аптеки.ipynb
@@ -11,7 +11,15 @@
     "- Возраст: от наименьшей по возрасту группы к наибольшей от 1 до 4\n",
     "- коды: женский пол - 1, мужской - 0\n",
     "- Уровень дохода от наименьшего к наибольшему (1-6)\n",
-    "- Запомнил/не запомнил: 1/0"
+    "- Запомнил/не запомнил: 1/0\n",
+    "\n",
+    "- Criteria of importance from 1 to 5, where 5 is important and 1 is not important\n",
+    "- Satisfaction criteria from 1 to 5, where 5 is completely satisfied, and 1 is completely dissatisfied\n",
+    "- Visit frequency criterion from least to most frequent, 1-6\n",
+    "- Age: from the smallest age group to the largest from 1 to 4\n",
+    "- codes: female - 1, male - 0\n",
+    "- Income level from lowest to highest (1-6)\n",
+    "- Remembered/didn’t remember: 1/0"
    ]
   },
   {
